--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,8 @@ body{
 .container{
   background: #FFF;
   border-radius: 5px;
-  box-shadow: 0px 0px 5px rgba(0,0,0, 0.2);    
+  box-shadow: 0px 0px 5px rgba(0,0,0, 0.2);
+  border: none;
 }
 h1, .card{
   font-family: 'Saira Extra Condensed', sans-serif;
