--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,66 @@
+:root{
+  --primary-color: #dc3545
+}
+*{
+  box-sizing: border-box;
+  margin: 0;  padding: 0;
+}
 body{
-  background: #F1F1F1;
+  background: #e9ecef;
+}
+.wrapper{
+  height: 100vh;
+  display: flex;
+  justify-content:center;
+  align-items: center;
 }
 .container{
   background: #FFF;
   border-radius: 5px;
   box-shadow: 0px 0px 5px rgba(0,0,0, 0.2);
-  border: none;
+  padding: 30px;
 }
-h1, .card{
-  font-family: 'Saira Extra Condensed', sans-serif;
+h1{
   text-align: center;
+  font-family: 'Saira Extra Condensed', sans-serif; 
 }
-label{
-	font-weight: bold
+p.lead{
+  font-family: 'Yellowtail', cursive;
+  font-size: 24px;
+  position: relative;
+}
+p.lead::after{
+  position: absolute;
+  content: '';
+  width: 75px;
+  height: 4px;
+  background-color: var(--primary-color);
+  bottom: -15px;
+  transform: translate(-50%);
+  left: 50%;
+}
+.jumbotron{
+  width: 100%;
+}
+.answer{
+  font-size: 24px;   
+  margin-top: 20px;
+  font-weight: 300;
+}
+.answer span{
+  font-weight: 600;
+}
+
+/*/////////////////////////////////////////////////////////////
+  [ Responsive CSS Starts Here ]
+*/
+@media(max-width: 600px){
+  .inputFields{
+    display: flex;
+    flex-direction: column;
+  }
+  .inputFields span{
+    display: block;
+    margin: 20px 0;
+  }
 }
